[gd_scene load_steps=2 format=3 uid="uid://c4p1r7k5m8bxq"]

[ext_resource type="Script" path="res://scripts/ui/battle/ComboDisplay.gd" id="1_combo"]

[node name="ComboDisplay" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 350.0
grow_horizontal = 2
script = ExtResource("1_combo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ComboLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 60
text = "42 COMBO!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplierLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "3.0x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MilestoneLabel" type="Label" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 80
text = "10 HIT COMBO!"
horizontal_alignment = 1
vertical_alignment = 1
